# Sync4Shikimori2MAL

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
src/sync4s2m/: __init__.py  __main__.py  auth.py  config.py  titlelist.py  tool.py
