[tool.poetry]
name = "sync4shikimori2myanimelist"
version = "0.1.0"
description = "Script for lists synchronization between Shikimori (source) and MyAnimeList (target)."
authors = ["Yaroslav Novitsky <rcr3211@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "sync4s2m", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "~=2.23.0"
authlib = "~=1.3.0"
requests-ratelimiter = "~=0.6.0"
platformdirs = "~=4.2.0"

[tool.poetry.scripts]
sync4s2m = "sync4s2m.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
